# hybrid-recommendation-and-insights-system

./: .gitignore  ECommerceOrderBundles.csv  README.md  app.py  mlflow.db  model.ipynb  pyproject.toml  recommender_artifacts.joblib  requirements.txt
experiments/: brand_encoder.pkl  category_encoder.pkl  final_model.ipynb  model_pipeline.pkl  products_df.pkl  top_association_rules.csv  user_location_encoder.pkl
